sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:14: error: '<-' expected but ')' found.
  for (m!=n){
           ^AlgBubbleSort1:26: error: illegal start of simple expression
}
^