sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  
  
  
  
  
  
  var i=0
  var j=0
  var m=0
  var n=getNombreValeurs()
  for (m!=n){
    if (i <- 0 to n-1){
      for (j <- 0 to n-1){
        if (plusPetit(j+1,j)){
          echange(j+1,j)
        }
        else {
          m+=1
        }
      }
    }
  }
}
  
  
  
  
  